gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/cenario_sem_texto.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346673934570" ID="ID_1037783247" MODIFIED="1346673939315" TEXT="MM">
<node CREATED="1346674579034" ID="ID_1296017925" MODIFIED="1346674579034" POSITION="right" TEXT=""/>
</node>
</map>
